arma-rs/tests/derive/fail_struct_map_transparent_default.stderr
error: #[arma(transparent)] and #[arma(default)] cannot be used together
 --> tests/derive/fail_struct_map_transparent_default.rs:3:10
  |
3 | #[derive(FromArma)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `FromArma` (in Nightly builds, run with -Z macro-backtrace for more info)

error: #[arma(transparent)] and #[arma(default)] cannot be used together
 --> tests/derive/fail_struct_map_transparent_default.rs:9:10
  |
9 | #[derive(FromArma)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `FromArma` (in Nightly builds, run with -Z macro-backtrace for more info)
